# starsoldier-bytecode-playground

./: Cargo.toml
asset/: bytecode-01.asm  bytecode-02.asm  bytecode-03.asm  bytecode-04.asm  bytecode-05.asm  bytecode-06.asm  bytecode-07.asm  bytecode-08.asm  bytecode-09.asm  bytecode-10.asm  bytecode-11.asm  bytecode-12.asm  bytecode-13.asm  bytecode-14.asm  bytecode-15.asm  bytecode-16.asm  bytecode-18.asm  bytecode-19.asm  bytecode-21.asm  bytecode-22.asm  bytecode-23.asm  bytecode-24.asm  bytecode-25.asm  bytecode-26.asm  bytecode-27.asm  bytecode-28.asm  bytecode-29.asm  bytecode-30.asm  bytecode-31.asm
docs/: index.html  starsoldier-bytecode-playground.wasm
src/: asset.rs  enemy.rs  game.rs  lib.rs  main.rs
