[package]
name = "starsoldier-bytecode-playground"
version = "0.1.0"
authors = ["taotao54321 <taotao54321@gmail.com>"]
edition = "2018"

[dependencies]
eyre = "0.6.5"
macroquad = "0.3.5"
once_cell = "1.7.2"
parse_int = "0.5.0"
starsoldier-bytecode = { git = "https://github.com/taotao54321/starsoldier-bytecode.git" }
